--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,4 @@
 {
-  "include": [
-    "src",
-    "src/app/modules/academicFaculty/academicFaculty.constant.ts",
-    "logs/permission",
-    "logs/userPermission"
-  ], // which files to compile
-  "exclude": ["node_modules"], // which files to skip
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
@@ -112,5 +105,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src"], // which files to compile
+  "exclude": ["node_modules"] // which files to skip
 }
