--- a/.eslintrc
+++ b/.eslintrc
@@ -12,19 +12,18 @@
   ],
   "rules": {
     "no-unused-vars": "error",
-    "prefer-const": "error",
+    "prefer-const": "warn",
     "no-unused-expressions": "error",
     "no-undef": "error",
-    "no-console": "off",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    // "no-console": "warn",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
   "env": {
     "browser": true,
     "es2021": true,
-    "node":true
+    "node": true
   },
   "globals": {
-    "process":"readonly"
+    "process": "readonly"
   }
 }
